--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "pinia": "^3.0.2",
     "pinia-colada": "^0.0.1",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vuetify": "^3.8.5",
+    "vuetify-nuxt-module": "0.18.6"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
