--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vuetify-nuxt-module": "0.18.6"
   },
   "devDependencies": {
+    "@nuxt/test-utils": "^3.19.0",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@tailwindcss/postcss": "^4.1.6",
@@ -39,6 +40,7 @@
     "eslint": "^9.26.0",
     "eslint-plugin-vue": "^10.1.0",
     "happy-dom": "^17.4.7",
+    "jsdom": "^26.1.0",
     "sass": "^1.88.0",
     "typescript": "^5.8.3",
     "vitest": "^3.1.3",
