--- a/package.json
+++ b/package.json
@@ -38,7 +38,13 @@
     "@vitejs/plugin-vue": "^5.2.4",
     "@vue/test-utils": "^2.4.6",
     "eslint": "^9.26.0",
+    "eslint-import-resolver-typescript": "^4.3.4",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-nuxt": "^4.0.0",
+    "eslint-plugin-promise": "^7.2.1",
+    "eslint-plugin-sonarjs": "^3.0.2",
     "eslint-plugin-vue": "^10.1.0",
+    "eslint-plugin-vue-a11y": "^0.0.31",
     "happy-dom": "^17.4.7",
     "jsdom": "^26.1.0",
     "sass": "^1.88.0",
